Set up prettier

--- a/carla/public/index.html
+++ b/carla/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400&family=Rubik+Mono+One&display=swap"
+      rel="stylesheet"
+    />
     <title>Carla Geglio</title>
   </head>
   <body>
@@ -25,7 +28,7 @@
         storageBucket: "carla-51d92.appspot.com",
         messagingSenderId: "653450403018",
         appId: "1:653450403018:web:50b25e9572ff5f1b196833",
-        measurementId: "G-M43GCV7YZE"
+        measurementId: "G-M43GCV7YZE",
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
