--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400&family=Rubik+Mono+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Rubik+Mono+One&display=swap"
       rel="stylesheet"
     />
     <title>Carla Geglio</title>
